add ingredient type in models
