# generated/src/main/kotlin/org/openapitools/model/CocktailIngredientDTO.kt
@@ -2,12 +2,14 @@ package org.openapitools.model
 
 import com.fasterxml.jackson.annotation.JsonProperty
 import io.swagger.v3.oas.annotations.media.Schema
+import javax.validation.Valid
 
 /**
  * 
  * @param id 
  * @param name 
  * @param preview 
+ * @param type 
  * @param amount 
  * @param unit 
  */
@@ -21,6 +23,10 @@ data class CocktailIngredientDTO(
 
     @Schema(example = "null", description = "")
     @field:JsonProperty("preview") val preview: kotlin.ByteArray? = null,
+
+    @field:Valid
+    @Schema(example = "null", description = "")
+    @field:JsonProperty("type") val type: IngredientTypeDTO? = null,
 
     @Schema(example = "null", description = "")
     @field:JsonProperty("amount") val amount: kotlin.Int? = null,
