# generated/src/main/kotlin/org/openapitools/model/IngredientDTO.kt
@@ -2,12 +2,14 @@ package org.openapitools.model
 
 import com.fasterxml.jackson.annotation.JsonProperty
 import io.swagger.v3.oas.annotations.media.Schema
+import javax.validation.Valid
 
 /**
  * 
  * @param id 
  * @param name 
  * @param image 
+ * @param type 
  * @param description 
  * @param tags 
  */
@@ -21,6 +23,10 @@ data class IngredientDTO(
 
     @Schema(example = "null", description = "")
     @field:JsonProperty("image") val image: kotlin.ByteArray? = null,
+
+    @field:Valid
+    @Schema(example = "null", description = "")
+    @field:JsonProperty("type") val type: IngredientTypeDTO? = null,
 
     @Schema(example = "null", description = "")
     @field:JsonProperty("description") val description: kotlin.String? = null,
