# generated/src/main/kotlin/org/openapitools/model/IngredientLightDTO.kt
@@ -2,12 +2,14 @@ package org.openapitools.model
 
 import com.fasterxml.jackson.annotation.JsonProperty
 import io.swagger.v3.oas.annotations.media.Schema
+import javax.validation.Valid
 
 /**
  * 
  * @param id 
  * @param preview 
  * @param name 
+ * @param type 
  */
 data class IngredientLightDTO(
 
@@ -18,7 +20,11 @@ data class IngredientLightDTO(
     @field:JsonProperty("preview") val preview: kotlin.ByteArray? = null,
 
     @Schema(example = "null", description = "")
-    @field:JsonProperty("name") val name: kotlin.String? = null
+    @field:JsonProperty("name") val name: kotlin.String? = null,
+
+    @field:Valid
+    @Schema(example = "null", description = "")
+    @field:JsonProperty("type") val type: IngredientTypeDTO? = null
 ) {
 
 }
